added chess.js file

--- a/src/games/chess/index.html
+++ b/src/games/chess/index.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <h1>Chess Game</h1>
-        <a href="../../../index.md">Back to Home</a>
+        <a href="../../index.md">Back to Home</a>
     </header>
     <main>
         <div id="chess-board"></div>
-        <!-- Chess game implementation will go here -->
     </main>
+    <script src="../../js/chess.js"></script>
 </body>
 </html>
