--- a/src/games/chess/index.html
+++ b/src/games/chess/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chess Game</title>
-    <link rel="stylesheet" href="../../css/chessstyle.css">
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body>
     <header>
         <h1>Chess Game</h1>
-        <a href="../../index.md">Back to Home</a>
+        <a href="../../../../Java-Learning-Games/">Back to Home</a>
     </header>
     <main>
         <div id="chess-board"></div>
+        <!-- Chess game implementation will go here -->
+        <!-- add multiple classes to leave-->
     </main>
-    <script src="../../js/chess.js"></script>
 </body>
 </html>
