fixed chess board not appearing issue

--- a/src/games/chess/index.html
+++ b/src/games/chess/index.html
@@ -13,8 +13,7 @@
     </header>
     <main>
         <div id="chess-board"></div>
-        <!-- Chess game implementation will go here -->
-        <!-- add multiple classes to leave-->
     </main>
+    <script src="../../js/chess.js"></script>
 </body>
 </html>
